CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(signatue)
SET(CMAKE_CXX_STANDARD 14)
#SET(Boost_USE_STATIC_LIBS ON)

FIND_PACKAGE(Boost 1.40 COMPONENTS
    program_options
    thread
    REQUIRED
)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

ADD_EXECUTABLE(${PROJECT_NAME}
    main.cpp
    utils.cpp
    signature.cpp
    md5.cpp
)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} LINK_PUBLIC ${Boost_LIBRARIES})
